css/pages/game-page-content.css
.game-page-content {
    clear: both;
    padding: 16px 24px 0; /*52px - 28px = 24px*/
    border: 2px dashed;
    display: flex;
    flex-flow: column nowrap;
    gap: 16px;
    --border-blocks-radius: 20px;
}

.game-page-content__main-img-block {
    width: 100%;
    padding: 32px;
    background-image: url("../../img/game1-page/malenia.png");
    background-size: cover;
    border-radius: var(--border-blocks-radius);
}

.game-page-content__main-img-buttons {
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    margin-bottom: 468px; /* Todo variables for different sizes  468px - to Deluxe*/
}

.game-page-content__back-button {
    display: flex;
    gap: 8px;
    border: none;
    padding: 12px;
    font-weight: 600;
    font-size: 16px;
    line-height: 16px;
}

.game-page-content__heart-button {
    width: 40px;
    height: 40px;
    border: 2px solid #302D2D;
    border-radius: 8px;
    padding: 8px;
    background-color: #000000;
    color: #302D2D;
}

.game-page-content__heart-button:hover {
    border-color: #FFFFFF !important;
    color: #FFFFFF !important;
}

.game-page-content__game-buy-block {
    width: 100%;
}

.game-page-content__game-buy-block-warning-imgs {
    margin-top: -50px;
    float: right;
    display: flex;
    gap: 8px;
}

.game-page-content__warning-img-wrapper {
    background-color: #000000;
    padding: 4px;
    border-radius: 8px;
}

.game-page-content__warning-img {
    border-radius: inherit;
}

.game-page-content__game-tags-line {
    display: flex;
    gap: 8px;
}

.game-page-content__game-tag {
    padding: 8px 16px 0;
    background-color: #000000;
    border-top-right-radius: var(--border-blocks-radius);
    border-top-left-radius: var(--border-blocks-radius);
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    color: #FFFFFF;
}

.game-page-content__game-price-block {
    padding: 16px;
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    overflow-x: auto;
    background-color: #000000;
    color: #FFFFFF;
    border-radius: var(--border-blocks-radius);
    border-top-left-radius: 0;
}

.game-page-content__main-img-header {
    font-weight: 600;
    font-size: 48px;
    line-height: 56px;
    margin-bottom: 16px;
}

.game-page-content__main-img-author {
    margin-left: 4px;
    font-weight: 400;
    font-size: 16px;
    line-height: 16px;
}

.game-page-content__buy-button {
    display: block;
    margin-bottom: 12px;
    padding: 16px 24px;
    border: none;
    font-weight: 600;
    font-size: 28px;
    line-height: 28px;
}

.game-page-content__release-date {
    margin-right: 16px; /* 32px - 16px */
    opacity: 0.4;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
}

.game-page-content__feature-line {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    gap: 16px;
}

.game-page-content__feature {
    width: 100%;
    padding: 12px;
    color: #FFFFFF;
    background-color: #000000;
    border-radius: var(--border-blocks-radius);
}

.game-page-content__feature-text {
    margin-top: 22px;
    margin-bottom: 4px; /*16 - 12 */
    margin-left: 4px; /* 16 - 12 */
    font-weight: 400;
    font-size: 16px;
    line-height: 22px;
    color: #FFFFFF;
}

.game-page-content__editions-block {
    padding: 40px 32px 48px;
    background-color: #000000;
    border-radius: var(--border-blocks-radius);;
}

.game-page-content__edition-text {
    margin-bottom: 24px;
    font-weight: 600;
    font-size: 32px;
    line-height: 40px;
    color: #FFFFFF;
}

.game-page-content__editions-line {
    display: flex;
    flex-flow: row nowrap;
    overflow-x: auto;
    gap: 24px;
}

.game-page-content__edition {
    display: flex;
    flex-flow: column nowrap;
}

.game-page-content__edition-img {
    border-radius: 12px;
    margin-bottom: 24px;
}

.game-page-content__edition-name {
    margin-bottom: 8px;
    font-weight: 600;
    font-size: 26px;
    line-height: 26px;
    color: #FFFFFF;
}

.game-page-content__edition-content-list {
    margin-bottom: 24px;
    list-style-type: none;
    list-style-position: outside;
    color: #FFFFFF;
    display: flex;
    flex-flow: column nowrap;
    gap: 8px;
    flex-grow: 2;
}

.game-page-content__edition-content-elem {
    font-weight: 400;
    font-size: 16px;
    line-height: 22px;
    color: #FFFFFF;
}

.game-page-content__edition-content-elem-question {
    margin-left: 4px;
}

.game-page-content__edition-support-message {
    padding: 12px;
    background-color: #FFFFFF;
    color: #000000;
    border-radius: var(--border-blocks-radius);
}

.game-page-content__edition-buttons-line {
    display: flex;
    flex-flow: row nowrap;
    overflow: auto;
    gap: 9px;
}

.game-page-content__edition-buy-button {
    border: none;
    padding: 12px 16px;
    font-weight: 600;
    font-size: 16px;
    line-height: 16px;
}

.game-page-content__description-blocks {
    padding-left: 32px; /* 84 - 52 */ /* Todo change on screen width changes */
    padding-right: 224px; /* 276 - 52 */
    margin-top: 64px;
    display: flex;
    flex-flow: column nowrap;
    gap: 108px;
}

.game-page-content__description-block {
    display: flex;
    flex-flow: row nowrap; /* Todo on mobile layout flex-direction column */
    gap: 56px; /* Todo change on screen width changes */
}

.game-page-content__description-text-block {
    width: 100%;
    display: flex;
    flex-flow: column nowrap;
    gap: 32px; /* todo cheat: 2 places, where gap = 60px  */
}

.game-page-content__description-block-header1 {
    width: 70%; /* Todo change on screen width changes */
    font-weight: 600;
    font-size: 48px;
    line-height: 56px;
    color: #000000;
}

.game-page-content__description-block-header3 {
    font-weight: 600;
    margin-bottom: 8px;
}

.game-page-content__description-block-paragraph {
    font-weight: 400;
}

.game-page-content__description-block-paragraph_transparent {
    opacity: 0.4;
}

.game-page-content__description-text-block-text {
    font-size: 20px;
    line-height: 28px;
    color: #000000;
}

